--- a/static/html/style.css
+++ b/static/html/style.css
@@ -20,6 +20,17 @@ body{
 html {
   overflow-x: hidden;
 }
+a {
+  color: black;
+  text-decoration: none;
+}
+a:hover {
+    font-style: italic;
+    text-decoration: underline;
+}
+a:visited {
+  color: orange;
+}
 header {
   display: flex;
   width: 100%;
@@ -128,14 +139,35 @@ header {
   margin-bottom: 0;
   text-align: center;
 }
-.left-sidebar h2,
-.right-sidebar h2 {
+.left-sidebar li,
+.right-sidebar li {
   max-width: 90%;
   padding-bottom: 0;
   padding-top: 0;
   margin: 0 0;
   font-weight: 500;
+  font-size: 1.5em;
+  margin-bottom: 1em;
 }
+.article-body {
+  width: 90%;
+  margin: 0 auto;
+  justify-content: flex-start;
+  gap: 0;
+
+}
+.article-body h1 {
+  margin-bottom: 0;
+  padding: 0;
+  font-size: 2.5em;
+}
+.article-body h2 {
+  margin-top: 0;
+  font-weight: 500;
+
+}
+
+
 @media (max-width: 1050px) {
   .disclaimer, .slogan {
     display: none;
@@ -161,4 +193,3 @@ header {
 .page-editor label {
   font-size: 1.25em;
 }
-.
