--- a/static/html/style.css
+++ b/static/html/style.css
@@ -82,11 +82,13 @@ header {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  gap: 1.5em;
+  gap: 2.5em;
   flex: 2;
   border-right: 3px solid black;
   border-left: 3px solid black;
   margin: 0 auto;
+  max-width: 95%;
+  margin-top: 1em;
 
 }
 .article {
@@ -129,10 +131,9 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   gap: 2.25em;
-  margin: 0;
-  padding: 0;
+
   /*TODO: MAKE STICKY*/
 }
 .left-sidebar h1,
@@ -142,13 +143,16 @@ header {
 }
 .left-sidebar li,
 .right-sidebar h2 {
-  max-width: 90%;
+  max-width: 85%;
   padding-bottom: 0;
   padding-top: 0;
-  margin: 0 0;
+  margin: 0 auto;
   font-weight: 500;
   font-size: 1.5em;
   margin-bottom: 1em;
+}
+.left-sidebar ol {
+  margin: 0 auto;
 }
 .article-body {
   width: min(90%, 80em);
@@ -177,8 +181,11 @@ header {
   .article-container {
     border: none;
   }
-  .top-banner span:nth-child(1),  .top-banner span:nth-child(3){
+  .top-banner span:nth-child(1) {
     display: none;
+  }
+  .top-banner {
+    gap: 0em;
   }
   .article {
     padding: 0;
