--- a/static/html/style.css
+++ b/static/html/style.css
@@ -219,6 +219,9 @@ header {
   .top-banner span:nth-child(1), .top-banner span:nth-child(3) {
     display: none;
   }
+  .top-banner span:nth-child(2) {
+    display: flex;
+  }
   .top-banner {
     gap: 0em;
   }
