--- a/static/html/style.css
+++ b/static/html/style.css
@@ -32,6 +32,7 @@ a:visited {
   font-style: italic;
 }
 header {
+  position: relative;
   display: flex;
   width: 100%;
   height: 20vh;
@@ -222,11 +223,26 @@ header {
   .top-banner span:nth-child(2) {
     display: flex;
   }
+  header label {
+    display: flex !important;
+  }
+  input[type=checkbox] {
+    display: flex !important;
+    opacity: 0;
+  }
   .top-banner {
     gap: 0em;
   }
   .article {
     padding: 0;
+  }
+  .menu-icon {
+    display: flex !important;
+  }
+  header {
+    justify-content: center;
+    max-width: 100%;
+    overflow: hide;
   }
 }
 .page-editor input {
@@ -249,4 +265,36 @@ header {
 }
 .link {
   color: blue;
+}
+.menu-icon, input[type=checkbox]  {
+  display: none;
+  width: 4em;
+  position: absolute;
+  left: 10;
+  top: 70%
+}
+.menu-items-container {
+  background: white !important;
+  z-index: 1000;
+  border: 2px solid black;
+  display: flex;
+  position: absolute;
+  left: 0;
+  top: 100%;
+  padding: 0.75em;
+  gap: 1em;
+}
+.menu-items-container h2 {
+  margin: 0;
+}
+
+.menu-items-container {
+   display: none;
+}
+
+input[type=checkbox]:checked ~ div {
+   display: flex !important;
+}
+header label {
+    display: none;
 }
