--- a/static/html/style.css
+++ b/static/html/style.css
@@ -27,10 +27,6 @@ a:hover {
     font-style: italic;
     text-decoration: underline;
 }
-a:visited {
-  color: #540494;
-  font-style: italic;
-}
 header {
   position: relative;
   display: flex;
@@ -112,10 +108,9 @@ header {
 }
 .article-container {
   display: flex;
-  justify-content: center;
   flex-direction: column;
   align-items: center;
-  gap: 2.5em;
+  gap: 1em;
   flex: 2;
   border-right: 3px solid black;
   border-left: 3px solid black;
@@ -305,10 +300,6 @@ header label {
   margin: 0;
   margin-top: 0.5em;
 }
-.member-box img{
-  width: 15em;
-  max-width: 90vw;
-}
 .member-box h3 {
   margin-top: 0.25em;
   font-weight: 300;
@@ -333,7 +324,7 @@ header label {
   font-size: 1.25em;
   margin-top: .5em;
 }
-.profile-display-container img {
+.profile-display-container img, .member-box img {
   margin-top: 0.5em;
   width: 20em;
   height: 20em;
